test/error/syn/inLess.tig
let
    var a := 0

    printf("%d\n", a)
end
